# DeflectorShields

./: .gitignore  Cargo.toml  README.md  out.tsv  out.txt  params.json  single.json  single.tsv
deflector-core/: Cargo.toml
deflector-core/src/: debug.rs  dual.rs  errors.rs  evolve.rs  lib.rs  multi_ids.rs  output.rs  params.rs  transition.rs  types.rs  warp_drive.rs  warp_drive_hamiltonian.rs  wd_natario.rs  wd_ours.rs
deflector-field-plot/: Cargo.toml
deflector-field-plot/src/: csv_dump.rs  main.rs
deflector-standalone/: Cargo.toml
deflector-standalone/src/: main.rs
parfiles/: alc_non_static.json  alc_rand.json  alc_static.json  alc_static_negative_slippage.json  alc_static_slippage.json  def_static.json  multiple.json  natario.json  single.json  static_debris_field.json  static_debris_field_natario.json  static_wall.json
resources/: Alcubierre.nb  gen_deflector_scheme.tex  paper_plots.py  plot_fixed_point.py  plot_heat_csv.py  plot_transition.py  plots.py
resources/fixed_point_0/: fixed_point_1.txt  fixed_point_2.txt  fixed_point_3.txt
resources/fixed_point_1/: fixed_point_1.txt  fixed_point_2.txt  fixed_point_3.txt
resources/notebooks/: Alcubierre.nb  Natario.nb  SharpBuble.nb  fixed_point_analysis.nb  fixed_point_analysis_k0.nb  generic_warp_drive.nb  generic_warp_drive_no_time.nb  geodesic_solver.nb  natario_drive.nb  (+2 more)
src/: alcubierre.rs  errors.rs  evolve.rs  logging.rs  main.rs  metrics.rs  minkowski.rs  multi_ids.rs  output.rs  params.rs  tsv.rs  types.rs  warp_drive_alcubierre.rs  warp_drive_alcubierre_sharp.rs  warp_drive_hamiltonian.rs
