[package]
name = "deflector-shields"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
nalgebra = "0.33.2"
polars = { version = "0.46.0", features = ["ipc"] }
polars-io = "0.46.0"
rand = "0.9.1"
rand_xoshiro = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
